--- a/portfolio_main/css/style.css
+++ b/portfolio_main/css/style.css
@@ -65,13 +65,6 @@ h2 {
   top: 100px;
   left: 0%;
 }
-.works h2 {
-  padding-top: 87px;
-  padding-left: 10%;
-  padding-bottom: 66px;
-  white-space: nowrap;
-  position: relative;
-}
 
 /*ヘッダーエリア*/
 .header_nav a {
@@ -111,7 +104,13 @@ h2 {
   width: 100%;
   flex-shrink: 0;
   position: absolute;
+  top: 100px;
+  left: 33%;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
   padding-bottom: 20px;
+  display: inline-block;
 }
 
 .home_slider {
@@ -120,15 +119,6 @@ h2 {
   height: 400px;
   overflow: hidden;
   padding-bottom: 300px;
-}
-
-.home_slider_item {
-  position: absolute;
-  top: 100px;
-  left: 36%;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
 }
 
 .home_slider_item.active {
@@ -206,17 +196,17 @@ h2 {
 
 /*おもいエリア*/
 .concept {
-  width: 100%;
+  max-width: 1366px;
 }
 
-.concept_background {
+.concept_background_2 {
+  background-color: #efe7b4;
   position: absolute;
-  max-width: 1366px;
   margin: 0 auto;
   width: 100%;
   height: 800px;
-  background-color: #efe7b4;
 }
+
 .concept p {
   padding-left: 10%;
   padding-top: 200px;
@@ -228,6 +218,7 @@ h2 {
 /*コンテンツエリア*/
 
 .contents {
+  display: inline-block;
   max-width: 1366px;
   padding-top: 80px;
   padding-bottom: 900px;
@@ -238,9 +229,14 @@ h2 {
 
 /*私についてのエリア*/
 
-.about_background_color {
+.about {
+  max-width: 1366px;
+}
+
+.about_background_color_2 {
   position: absolute;
   margin: 0 auto;
+  width: 100%;
 }
 
 .about ul {
@@ -426,11 +422,16 @@ h2 {
 
 /*つくったものエリア*/
 .works {
-  max-width: 1366px;
   width: 100%;
   height: 1417px;
   background-color: #efe7b4;
-  position: absolute;
+}
+
+.works h2 {
+  padding-top: 87px;
+  padding-left: 10%;
+  padding-bottom: 66px;
+  white-space: nowrap;
 }
 
 .works ul {
@@ -510,13 +511,15 @@ h2 {
 
 .circle {
   display: inline-block;
-  width: 1600px;
+  width: 100%;
+  max-width: 1366px;
   height: 200px;
-  border-radius: 50% / 100% 100% 0 0;
+  border-radius: 60% / 70% 70% 0 0;
   background: white;
   position: relative;
-  top: 1300px;
-  left: -120px;
+  top: 1290px;
+  left: 0px;
+  box-sizing: border-box;
 }
 .contact h2 {
   padding-top: 1300px;
@@ -528,6 +531,7 @@ h2 {
   position: relative;
   top: 1150px;
   left: 53%;
+  display: inline-block;
 }
 
 .contact_parts {
@@ -555,7 +559,7 @@ h2 {
 
 /*フッターエリア*/
 
-footer {
+.footer_era {
   max-width: 1366px;
   padding-top: 300px;
 }
@@ -660,4 +664,7 @@ footer {
   margin: 0 auto;
   text-align: center;
   padding-bottom: 30px;
+}
+
+@media screen and (max-width: 1100px) {
 }
