--- a/portfolio_main/css/style.css
+++ b/portfolio_main/css/style.css
@@ -507,28 +507,32 @@ h2 {
 }
 /*お問合せエリア*/
 .contact {
-  max-width: 1366px;
+  /* max-width: 1366px; */
+  position: relative;
 }
 .contact_contents {
   display: flex;
   justify-content: space-between;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .circle {
   display: inline-block;
   width: 100%;
-  max-width: 1366px;
+
   height: 200px;
   border-radius: 60% / 70% 70% 0 0;
   background: white;
-  position: relative;
+  position: absolute;
+  bottom: 100%;
   /* top: 1290px; */
   left: 0px;
   box-sizing: border-box;
 }
 .contact h2 {
   /* padding-top: 1300px; */
-  padding-left: 10%;
+  /* padding-left: 10%; */
   white-space: nowrap;
 }
 
@@ -540,8 +544,8 @@ h2 {
 }
 
 .contact_parts {
-  max-width: 1000px;
-  padding: 10%;
+  width: 350px;
+  /* padding-left: 10%; */
 }
 
 .contact ul {
@@ -556,6 +560,7 @@ h2 {
 }
 
 .mail_icon {
+  width: 40px;
   padding-top: 73px;
   padding-bottom: 100px;
   padding-left: 3%;
