--- a/portfolio_main/css/style.css
+++ b/portfolio_main/css/style.css
@@ -53,7 +53,6 @@ h2 {
 }
 .about h2 {
   padding-top: 87px;
-  padding-left: 10%;
   white-space: nowrap;
   padding-bottom: 160px;
   position: relative;
@@ -194,7 +193,7 @@ h2 {
   max-width: 1366px;
 }
 
-.concept_background_2 {
+.concept_background {
   background-color: #efe7b4;
   position: absolute;
   margin: 0 auto;
@@ -231,7 +230,7 @@ h2 {
   background-size: cover;
 }
 .about_contents {
-  max-width: 1366px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 /* .about_background_color_2 {
@@ -509,6 +508,8 @@ h2 {
 .contact {
   /* max-width: 1366px; */
   position: relative;
+  overflow: hidden;
+  margin-top: -100px;
 }
 .contact_contents {
   display: flex;
@@ -518,18 +519,15 @@ h2 {
 }
 
 .circle {
-  display: inline-block;
-  width: 100%;
-
-  height: 200px;
-  border-radius: 60% / 70% 70% 0 0;
-  background: white;
-  position: absolute;
-  bottom: 100%;
-  /* top: 1290px; */
-  left: 0px;
-  box-sizing: border-box;
+  min-height: 400px;
+  border-top-right-radius: 1000px 200px;
+  border-top-left-radius: 1000px 200px;
+  margin-left: -100px;
+  margin-right: -100px;
+  background: #fff;
+  padding: 100px;
 }
+
 .contact h2 {
   /* padding-top: 1300px; */
   /* padding-left: 10%; */
@@ -572,6 +570,9 @@ h2 {
 .footer_era {
   max-width: 1366px;
   padding-top: 300px;
+  background-image: url("../images/img/wave_main.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .circle_footer {
@@ -628,13 +629,21 @@ h2 {
   height: 440px;
 }
 
+/* .about {
+  width: 100%;
+  background-image: url("../images/img/wave_gr_1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.about_contents {
+  max-width: 1000px;
+  margin: 0 auto;
+} */
+
 .footer {
   max-width: 1366px;
   margin: 0 auto;
   text-align: center;
-  position: relative;
-  top: 220px;
-  left: 0px;
 }
 
 .footer_a {
