--- a/portfolio _contact/CSS/style.css
+++ b/portfolio _contact/CSS/style.css
@@ -1,17 +1,10 @@
 @charset "UTF-8";
 
-.container {
-  max-width: 1366px;
+main > section {
+  max-width: 100%;
   margin: 0 auto;
 }
-
-main {
-  background-color: white;
-  max-width: 1366px;
-
-  margin-right: 5%;
-}
-
+/*ヘッダーエリア*/
 .header_wrap {
   max-width: 1366px;
   width: 100%;
@@ -20,40 +13,39 @@ main {
   align-items: center;
   justify-content: space-between;
 }
-
 .header_logo {
   font-family: "Hubballi";
   font-size: 20px;
-  font-weight: regular;
+  font-weight: normal;
   padding-top: 30px;
   padding-left: 72px;
   white-space: nowrap;
 }
-.header_ul {
+.header_pc_ul {
+  display: block;
   font-size: 12px;
   display: flex;
   padding-top: 30px;
-  padding-right: 180px;
 }
-
-.header_nav li {
+.header_sp_ul {
+  display: none;
+}
+.header_pc_nav li {
   padding-left: 30px;
   white-space: nowrap;
   padding-right: 15px;
 }
 
-/*ヘッダーエリア*/
-.header_nav a {
+.header_pc_nav a {
   position: relative;
   display: inline-block;
   transition: color 0.6s ease-out;
 }
-
-.header_nav {
+.header_pc_nav {
   max-width: 1000px;
+  margin: 0 auto;
 }
-
-.header_nav a::after {
+.header_pc_nav a::after {
   content: "";
   position: absolute;
   left: 0;
@@ -65,10 +57,9 @@ main {
   transform-origin: left top;
   transition: transform 0.5s ease-out;
   /*opacity: 0;
-      transition: opacity 0.6s ease-out; 下線がふわっと出るタイプ*/
+  transition: opacity 0.6s ease-out; 下線がふわっと出るタイプ*/
 }
-
-.header_nav a:hover::after {
+.header_pc_nav a:hover::after {
   transform: scale(1, 1);
   transform: right top;
   /*opacity: 1;  下線がふわっと出るタイプ*/
@@ -96,7 +87,7 @@ main {
 }
 
 .c-form {
-  max-width: 1000px;
+  max-width: 500px;
   margin: 0 auto;
 }
 .c-form__item {
@@ -145,37 +136,19 @@ textarea.c-form__input {
   background-color: #a0a08e(90%);
 }
 
-@media (min-width: 640px) {
-  .c-form__item {
-    flex-wrap: nowrap;
-  }
-  .c-form__label {
-    width: 40%;
-  }
-  .c-form__input {
-    width: 55%;
-  }
-}
-
 /*フッターエリア*/
-.background_wave {
-  max-width: 1366px;
-  width: 100%;
+.footer_era {
+  padding-top: 300px;
+  background-image: url("../img/wave_main.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0 auto;
-  display: block;
-  position: absolute;
-  height: 440px;
 }
 .footer {
   max-width: 1366px;
   margin: 0 auto;
   text-align: center;
-  position: relative;
-
-  top: 220px;
-  left: 0px;
 }
-
 .footer_a {
   display: flex;
   font-size: 13px;
@@ -184,17 +157,14 @@ textarea.c-form__input {
   padding: 20px;
   white-space: nowrap;
 }
-
 .footer_a li {
   margin: 0 10px;
 }
-
 .sns_rnk {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .instagram_icon,
 .x_icon {
   width: 24px;
@@ -202,15 +172,273 @@ textarea.c-form__input {
   display: flex;
   align-items: center;
 }
-
 .sns_rnk img {
   width: 100%;
   height: auto;
 }
 .copyright {
+  font-size: 11px;
+  font-weight: lighter;
   max-width: 1366px;
   width: 100%;
   margin: 0 auto;
   text-align: center;
   padding-bottom: 30px;
+}
+
+@media screen and (max-width: 910px) {
+  .header_pc_nav {
+    display: none;
+  }
+
+  /*ハンバーガーメニューエリア
+  .sp_btn {
+    display: block;
+    height: 23px;
+    cursor: pointer;
+    z-index: 5;
+  }
+  .home_sp_circle {
+    z-index: 5;
+    width: 100%;
+    overflow-x: hidden;
+    position: relative;
+  }
+  .sp_btn span {
+    display: block;
+    width: 33px;
+    height: 3px;
+    border-radius: 2px;
+    background: #fff;
+    position: relative;
+    top: 10px;
+    transition: 0.3s;
+  }
+  .sp_btn span::before,
+  .sp_btn span::after {
+    content: "";
+    display: block;
+    width: 33px;
+    height: 3px;
+    border-radius: 2px;
+    background: #fff;
+    position: absolute;
+    transition: 0.3s;
+  }
+  .sp_btn span::before {
+    bottom: 10px;
+  }
+  .sp_btn span::after {
+    top: 10px;
+  }
+  */
+  /*ばつ印
+  .sp_btn.open span {
+    background: transparent;
+  }
+  .sp_btn.open span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+  }
+  .sp_btn.open span::after {
+    top: 0;
+    transform: rotate(135deg);
+  }
+  .header_sp_nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh; 
+    background: #8b8c8c;
+    z-index: 4;
+  }
+  .header_sp_nav.active {
+    display: flex; 
+  }
+  .header_sp_nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  .header_sp_nav li {
+    padding: 20px;
+    color: #fff;
+    font-family: "Zen Kaku Gothic Antique", "Hubballi", "游ゴシック",
+      "YuMGothic", "Hiragino Mincho ProN W3", "ヒラギノ角ゴ", "HiraKaku";
+    font-weight: lighter;
+    font-size: 14px;
+    position: relative;
+  }
+  .header_sp_nav a {
+    position: relative; 
+  }
+  .header_sp_nav a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: #fff;
+    width: 100%;
+    height: 1px;
+    transform: scale(0, 1);
+    transform-origin: left bottom;
+    transition: transform 0.5s ease-out;
+  }
+  .header_sp_nav a:hover::after {
+    transform: scale(1, 1);
+    transform: right top;
+  }
+  picture {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+*/
+
+  @media screen and (max-width: 767px) {
+    /*全体*/
+    picture {
+      max-width: 767px;
+      width: 100%;
+    }
+    main > .header {
+      max-width: 300px;
+    }
+    h2 {
+      font-size: 20px;
+      padding-top: 137px;
+    }
+
+    /*----------------------*/
+    /*ヘッダーエリア*/
+    .header_pc_ul {
+      display: none;
+    }
+    .header_wrap {
+      max-width: 767px;
+      width: 100%;
+      padding-left: 22px;
+      margin: 0 auto;
+    }
+    .header_logo {
+      font-family: "Hubballi";
+      font-size: 19px;
+      font-weight: normal;
+      padding-top: 30px;
+      padding-left: 22px;
+      white-space: nowrap;
+    }
+    .contact_title {
+      font-size: 20px;
+      font-weight: normal;
+      padding-top: 57px;
+      padding-left: 0%;
+      padding-bottom: 38px;
+      text-align: center;
+    }
+
+    .contact_sbtitle {
+      font-size: 12px;
+      font-weight: lighter;
+      text-align: center;
+      padding-bottom: 95px;
+      padding-top: 0px;
+    }
+
+    .c-form {
+      max-width: 330px;
+      margin: 0 auto;
+    }
+    .c-form__item {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      height: 55px;
+      margin-bottom: 20px;
+    }
+
+    .c-form__input {
+      padding: 10px;
+      width: 100%;
+      font-family: "Zen Kaku Gothic Antique", "Hubballi", "游ゴシック",
+        "YuMGothic", "Hiragino Mincho ProN W3", "ヒラギノ角ゴ", "HiraKaku";
+      font-size: 12px;
+      font-weight: lighter;
+      opacity: 0.8;
+      outline: none;
+      border: 1px solid #efeeec;
+      border-radius: 3px;
+      align-items: center;
+    }
+
+    textarea.c-form__input {
+      height: 160px;
+    }
+    .c-form__submit {
+      text-align: center;
+      padding-top: 150px;
+      padding-bottom: 100px;
+    }
+    .c-form__submit button {
+      font-size: 12px;
+      font-weight: lighter;
+      color: #5b573e;
+      background-color: #efe7b4;
+      border-radius: 3px;
+      padding: 5px 32px;
+      transition: 0.8s;
+      cursor: pointer;
+      border: none;
+    }
+    .c-form__submit button:hover {
+      color: #a0a08e;
+      background-color: #a0a08e(90%);
+    }
+
+    /*----------------------*/
+    /*フッターエリア*/
+    .footer_era {
+      background-image: url("../img/wave_sp_bl@2x.png");
+      padding-top: 40px;
+      background-size: cover;
+    }
+    .footer {
+      max-width: 765px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .footer_a {
+      flex-direction: column;
+      font-size: 12px;
+      justify-content: center;
+      white-space: nowrap;
+      padding-top: 20px;
+    }
+    .footer_a li {
+      margin: 25px 25px 25px;
+    }
+    .sns_rnk {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .instagram_icon,
+    .x_icon {
+      width: 29px;
+      margin: 20px 0px 40px;
+      display: flex;
+      align-items: center;
+    }
+    .sns_rnk img {
+      width: 100%;
+      height: auto;
+    }
+    .copyright {
+      font-size: 8px;
+      font-weight: lighter;
+    }
+  }
 }
