--- a/portfolio_webdesign/css/style.css
+++ b/portfolio_webdesign/css/style.css
@@ -47,16 +47,41 @@ main > section {
   margin: 0 auto;
 }
 
-.header_pc_ul li li {
-  height: 0;
-  overflow: hidden;
-  transition: 0.5s;
+.dropdown_lists {
+  display: none; /*デフォルトでは非表示の状態にしておく*/
+  width: 100%;
+  position: absolute;
+  top: 60px;
+  left: 0;
+}
+
+.web_design,
+.glass_art:not(:first-child)::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.web_design,
+.glass_art a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #5b573e;
+  text-decoration: none;
+  position: relative;
+}
+.hnavi_list:hover .dropdown_lists {
+  display: block;
 }
 
 .header_pc_ul li li a {
   border-top: 1px solid #eee;
 }
-.gnav li:hover > ul > li {
+.header_pc_ul li:hover > ul > li {
   height: 2rem;
   overflow: visible;
 }
