--- a/portfolio_main/css/style.css
+++ b/portfolio_main/css/style.css
@@ -716,7 +716,7 @@ h2 {
     height: 100%;
   }
   .header_sp_nav li {
-    padding: 20px;
+    margin: 20px;
     color: #5b573e;
     font-family: "Zen Kaku Gothic Antique", "Hubballi", "游ゴシック",
       "YuMGothic", "Hiragino Mincho ProN W3", "ヒラギノ角ゴ", "HiraKaku";
@@ -724,11 +724,7 @@ h2 {
     font-size: 14px;
     position: relative;
   }
-  .header_sp_nav a {
-    position: relative;
-    top: -300px;
-    left: 0;
-  }
+
   .header_sp_nav a::after {
     content: "";
     position: absolute;
