--- a/css/style.css
+++ b/css/style.css
@@ -1109,6 +1109,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
   }
   .contact_contents {
     flex-direction: column;
@@ -1124,6 +1125,7 @@ h2 {
     margin-left: -50px;
     margin-right: -50px;
     background: #fff;
+    width: 100%;
   }
   .contact h2 {
     white-space: nowrap;
